# arduino-prelude

./: CMakeLists.txt  README.md  ardpp.cpp  arduino-prelude.cpp
.github/workflows/: build.yml
CMake/Modules/: CPackCommon.cmake
CMake/PackagingProfiles/: APKBUILD.cmake  Archive.cmake
CPack/Generators/APKBUILD/: APKBUILD.cmake  APKBUILD.in
